Add archive row class to separate full workshops and individual content

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -2,6 +2,12 @@
    ARCHIVE
    ========================================================================== */
 
+.archive-row {
+  margin-top: 1em;
+  margin-bottom: 2em;
+  height: 500px;
+}   
+
 .archive {
   margin-top: 1em;
   margin-bottom: 2em;
