--- a/_layouts/category-index.html
+++ b/_layouts/category-index.html
@@ -3,16 +3,16 @@ layout: archive
 ---
 
 {{ content }}
-<div>
-<h1>Recommended Full Day Workshops</h1>
-</div>
-<div class="entries-{{ page.entries_layout }}">
-  {% include documents-pages.html collection=pages sort_by=page.sort_by sort_order=page.sort_order type=page.entries_layout category_filter=page.filter %}
-</div>
-
-<div>
-  <h1>Individual Content Pieces</h1>
-  </div>
+<div class="archive-row">
+  <h1>Recommended Full Day Workshops</h1>
   <div class="entries-{{ page.entries_layout }}">
     {% include documents-pages.html collection=pages sort_by=page.sort_by sort_order=page.sort_order type=page.entries_layout category_filter=page.filter %}
   </div>
+</div>
+
+<div class="archive-row">
+  <h1>Individual Content Pieces</h1>
+  <div class="entries-{{ page.entries_layout }}">
+    {% include documents-pages.html collection=pages sort_by=page.sort_by sort_order=page.sort_order type=page.entries_layout category_filter=page.filter %}
+  </div>
+</div>
